# Vertex

./: .gitignore  README.md  clear_cache.js  debug_main_args.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  resize_icon.mjs  tailwind.config.ts  test_proxies.js  test_sgdb.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: API_PROVIDERS.md  ARCHITECTURE.md  CACHE_STRATEGY.md  CHANGELOG.md  CODING_STANDARDS.md  DATABASE.md  EVENT_SYSTEM.md  ROADMAP.md  SRS.md
prisma/: schema.prisma
public/: redirect.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  hash_service.rs  icon_service.rs  lib.rs  main.rs  metadata_extractor.rs  window_enum.rs
src-tauri/src/commands/: migration.rs  mod.rs  process.rs  system.rs
src/app/: App.tsx
src/lib/: supabase.ts  tauri-ipc.ts
src/pages/: Apps.tsx  Auth.tsx  Collections.tsx  Discovery.tsx  Index.tsx  NotFound.tsx  OAuthRedirect.tsx  Settings.tsx  Stats.tsx  Wishlist.tsx
src/providers/: HLTBProvider.ts  SteamGridDBProvider.ts  SteamProvider.ts  types.ts
src/services/: CacheManager.ts  CollectionsManager.ts  DiscoveryManager.ts  EventBus.ts  GameDetector.ts  ImageManager.ts  JobQueue.ts  LibraryManager.ts  MetadataManager.ts  ProcessManager.ts  SessionManager.ts  SettingsManager.ts  StatisticsManager.ts  SteamSyncManager.ts  SyncManager.ts
src/stores/: app-store.ts  auth-store.ts  collections-store.ts  discovery-store.ts  library-store.ts  settings-store.ts  (+3 more)
(+20 files in other folders)
