[package]
name = "vazorism"
version = "1.2.1"
description = "Personal Game & Application Tracker"
authors = ["Vazorism"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-shell = "2.0.0"
sha2 = "0.10"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-os = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
] }
